--- a/platforms/ios/www/templates/tabs.html
+++ b/platforms/ios/www/templates/tabs.html
@@ -15,6 +15,11 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
+  <!-- Remédio Tab -->
+  <ion-tab title="Remédios" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/remedios">
+    <ion-nav-view name="tab-remedio"></ion-nav-view>
+  </ion-tab>
+
   <!-- Account Tab -->
   <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
