--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,3 +3,47 @@
 .item-text-center-vertical {
   line-height: 300%;
 }
+
+.icone-remedio-on {
+  background-repeat: no-repeat;
+  background-position:center;
+  background-image: url('../img/lista_remedios_on.png');
+  background-size: contain;
+}
+
+.icone-remedio-off {
+  background-repeat: no-repeat;
+  background-position:center;
+  background-image: url('../img/lista_remedios_off.png');
+  background-size: contain;
+}
+
+.icone-alerta-on {
+  background-repeat: no-repeat;
+  background-position:center;
+  background-image: url('../img/alerta_remedios_on.png');
+  background-size: contain;
+}
+
+.icone-alerta-off {
+  background-repeat: no-repeat;
+  background-position:center;
+  background-image: url('../img/alerta_remedios_off.png');
+  background-size: contain;
+}
+
+.tabs, .color-mfred {
+  color: #ffffff !important;
+  background-color: #cc0044 !important;
+}
+
+.color-mflightred {
+  background-color: #ff0049 !important;
+}
+.color-mflightblue {
+  color: #00bcfe !important;
+}
+
+.color-mfblue {
+  color: #009ec9 !important;
+}
