--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,29 +5,13 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-background-assertive tabs-color-light">
 
-  <!-- Dashboard Tab -->
-  <!--<ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">-->
-    <!--<ion-nav-view name="tab-dash"></ion-nav-view>-->
-  <!--</ion-tab>-->
-
-  <!-- Chats Tab -->
-  <!--<ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">-->
-    <!--<ion-nav-view name="tab-chats"></ion-nav-view>-->
-  <!--</ion-tab>-->
-
   <!-- Remédio Tab -->
-  <ion-tab title="Remédios" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/remedios">
+  <ion-tab title="Remédios" icon-off="icone-remedio-off" icon-on="icone-remedio-on" href="#/tab/remedios">
     <ion-nav-view name="tab-remedio"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Alertas" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/alertas">
+  <ion-tab title="Alertas" icon-off="icone-alerta-off" icon-on="icone-alerta-on" href="#/tab/alertas">
     <ion-nav-view name="tab-alerta"></ion-nav-view>
   </ion-tab>
-
-  <!-- Account Tab -->
-  <!--<ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">-->
-    <!--<ion-nav-view name="tab-account"></ion-nav-view>-->
-  <!--</ion-tab>-->
-
 
 </ion-tabs>
