colocando outra opcao no slide da celula de remedio para marcar que tomou o remedio. Cor azul correta, não faz a açao ainda

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -40,8 +40,13 @@
 .color-mflightred {
   background-color: #ff0049 !important;
 }
-.color-mflightblue {
+
+.color-text-mflightblue {
   color: #00bcfe !important;
+}
+
+.color-background-mflightblue {
+  background-color: #00bcfe !important;
 }
 
 .color-mfblue {
