--- a/www/templates/tab-remedio.html
+++ b/www/templates/tab-remedio.html
@@ -11,6 +11,9 @@
           <p class="color-mfblue">{{remedio.expirationDate}}</p>
           <i class="icon ion-chevron-right icon-accessory"></i>
 
+          <ion-option-button class="button-assertive color-background-mflightblue" ng-click="">
+            Tomei
+          </ion-option-button>
           <ion-option-button class="button-assertive" ng-click="remove(remedio)">
             Delete
           </ion-option-button>
