removendo barra inutil e iniciando a colocacao de toggle e botao na interface inicial

--- a/platforms/ios/www/css/style.css
+++ b/platforms/ios/www/css/style.css
@@ -37,3 +37,18 @@
   background-color: #cc0044 !important;
 }
 
+.color-mflightred {
+  background-color: #ff0049 !important;
+}
+
+.color-text-mflightblue {
+  color: #00bcfe !important;
+}
+
+.color-background-mflightblue {
+  background-color: #00bcfe !important;
+}
+
+.color-mfblue {
+  color: #009ec9 !important;
+}
