--- a/platforms/ios/www/templates/tab-alerta.html
+++ b/platforms/ios/www/templates/tab-alerta.html
@@ -7,9 +7,15 @@
       <ion-list>
         <ion-item class="item-remove-animate item-thumbnail-left item-icon-right" ng-repeat="alerta in alertas" type="item-text-wrap" href="#/tab/alertas/{{alerta.id}}">
           <img ng-src="{{alerta.face}}">
-          <h2 class="item-text-center-vertical">{{alerta.name}}</h2>
-          <p>Próxima: {{alerta.nextDate}}</p>
-          <i class="icon ion-chevron-right icon-accessory"></i>
+          <h2 class="item-text-center-vertical color-mfblue">{{alerta.name}}</h2>
+          <p class="color-mfblue">Próxima: {{alerta.nextDate}}</p>
+
+          <label class="toggle">
+            <input type="checkbox">
+            <div class="track">
+              <div class="handle"></div>
+            </div>
+          </label>
 
           <ion-option-button class="button-assertive" ng-click="remove(alerta)">
             Delete
