--- a/www/templates/tab-alerta.html
+++ b/www/templates/tab-alerta.html
@@ -1,22 +1,27 @@
 <ion-view view-title="Meus Alertas">
-  <ion-pane>
-    <ion-header-bar class="bar-assertive">
-      <h1 class="title">Remédios</h1>
-    </ion-header-bar>
-    <ion-content>
-      <ion-list>
-        <ion-item class="item-remove-animate item-thumbnail-left item-icon-right" ng-repeat="alerta in alertas" type="item-text-wrap" href="#/tab/alertas/{{alerta.id}}">
-          <img ng-src="{{alerta.face}}">
-          <h2 class="item-text-center-vertical color-mfblue">{{alerta.name}}</h2>
-          <p class="color-mfblue">Próxima: {{alerta.nextDate}}</p>
-          <i class="icon ion-chevron-right icon-accessory"></i>
+  <ion-content>
+    <ion-list>
+      <ion-item class="item-remove-animate item-thumbnail-left item-icon-right" ng-repeat="alerta in alertas" type="item-text-wrap" href="#/tab/alertas/{{alerta.id}}">
+        <img ng-src="{{alerta.face}}">
 
-          <ion-option-button class="button-assertive" ng-click="remove(alerta)">
-            Delete
-          </ion-option-button>
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-pane>
+        <h2 class="item-text-center-vertical color-mfblue">{{alerta.name}}</h2>
+        <p class="color-mfblue">Próxima: {{alerta.nextDate}}</p>
+        <!--<ion-toggle  ng-checked="alerta.active">-->
+          <!--<h2 class="item-text-center-vertical color-mfblue">{{alerta.name}}</h2>-->
+          <!--<p class="color-mfblue">Próxima: {{alerta.nextDate}}</p>-->
+        <!--</ion-toggle>-->
+        <!--<label class="toggle" ng-checked="alerta.active">-->
+          <!--<input type="checkbox">-->
+          <!--<div class="track">-->
+            <!--<div class="handle"></div>-->
+          <!--</div>-->
+        <!--</label>-->
+
+        <ion-option-button class="button-assertive" ng-click="remove(alerta)">
+          Delete
+        </ion-option-button>
+      </ion-item>
+    </ion-list>
+  </ion-content>
 </ion-view>
 
