Created a page to add medicament. Added ngMessages module.

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9778,3 +9778,16 @@ a.button {
 .posicao-botao {
   position: fixed;
   bottom: 25px; }
+
+form.ng-submitted label.has-error {
+  border-bottom: 2px solid #ef473a; }
+
+form.ng-submitted .form-errors {
+  display: block; }
+  form.ng-submitted .form-errors .form-error {
+    padding: 10px 10px;
+    text-align: center;
+    color: #ef473a; }
+
+form .form-errors {
+  display: none; }
