--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,12 +5,20 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-background-assertive tabs-color-light">
 
+  <button class="button button-outline button-assertive icon ion-plus-round posicao-botao round-button "></button>
+
   <!-- Remédio Tab -->
-  <ion-tab title="Remédios" icon-off="icone-remedio-off" icon-on="icone-remedio-on" href="#/tab/remedios">
+  <ion-tab title="Remédios"
+           icon-off="icone-remedio-off"
+           icon-on="icone-remedio-on"
+           href="#/tab/remedios">
     <ion-nav-view name="tab-remedio"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Alertas" icon-off="icone-alerta-off" icon-on="icone-alerta-on" href="#/tab/alertas">
+  <ion-tab title="Alertas"
+           icon-off="icone-alerta-off"
+           icon-on="icone-alerta-on"
+           href="#/tab/alertas">
     <ion-nav-view name="tab-alerta"></ion-nav-view>
   </ion-tab>
 
