--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,7 +5,9 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-background-assertive tabs-color-light">
 
-  <button class="button button-outline button-assertive icon ion-plus-round posicao-botao round-button "></button>
+  <button class="button button-outline button-assertive icon ion-plus-round posicao-botao round-button"
+          ng-click="createMedicament()">
+  </button>
 
   <!-- Remédio Tab -->
   <ion-tab title="Remédios"
