--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -13,14 +13,14 @@ navigation history that also transitions its views in and out.
   <ion-tab title="Remédios"
            icon-off="icone-remedio-off"
            icon-on="icone-remedio-on"
-           href="#/tab/remedios">
+           ui-sref="tab.remedio">
     <ion-nav-view name="tab-remedio"></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="Alertas"
            icon-off="icone-alerta-off"
            icon-on="icone-alerta-on"
-           href="#/tab/alertas">
+           ui-sref="tab.alerta">
     <ion-nav-view name="tab-alerta"></ion-nav-view>
   </ion-tab>
 
