--- a/www/templates/tabs/tab-remedio.html
+++ b/www/templates/tabs/tab-remedio.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Meus Remédios">
 
-  <div class="bar bar-subheader">
-    <div class="button-bar bar-assertive">
-      <a class="button" ng-click="remedios.filter=false"
+  <div class="platform-android bar-custom bar bar-subheader">
+    <div class="button-bar">
+      <a class="button button-outline button-assertive" ng-click="remedios.filter=false"
          ng-class="{active: remedios.filter == false}">Válidos</a>
-      <a class="button" ng-click="remedios.filter=true"
+      <a class="button button-outline button-assertive" ng-click="remedios.filter=true"
          ng-class="{active: remedios.filter == true}">Vencidos</a>
     </div>
   </div>
