--- a/www/scss/style.scss
+++ b/www/scss/style.scss
@@ -8,6 +8,17 @@
 
 .platform-android .bar-custom {
   top: 93px;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
+  border-bottom-width: 0px;
+  border-bottom-style: solid; }
+
+.tabs-striped .tab-item {
+  margin-top: 1px;
+  font-size: 12px;  }
+
+.tabs-striped .tab-item.tab-item-active,
+.tabs-striped > .tabs {
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: bold;
+  border-bottom-width: 0px;
 }
