--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,12 +1,9 @@
-<!--
-Create tabs with an icon and label, using the tabs-positive style.
-Each tab's child <ion-nav-view> directive will have its own
-navigation history that also transitions its views in and out.
--->
-<ion-tabs class="tabs-icon-top tabs-background-assertive tabs-color-light">
+<ion-nav-bar class="color-mfred">
+  <ion-nav-back-button></ion-nav-back-button>
+</ion-nav-bar>
 
-  <button ng-if="isIOS === true"
-          class="button button-outline button-assertive icon ion-plus-round posicao-botao round-button"
+<ion-tabs class="tabs-icon-top tabs-background-assertive tabs-color-light">
+  <button class="button button-outline button-assertive icon ion-plus-round posicao-botao round-button"
           ng-click="createMedicament()">
   </button>
 
@@ -18,6 +15,7 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-remedio"></ion-nav-view>
   </ion-tab>
 
+  <!-- Alertas Tab -->
   <ion-tab title="Alertas"
            icon-off="icone-alerta-off"
            icon-on="icone-alerta-on"
