Added alert state and page. Adapting add element to android.

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs class="tabs-icon-top tabs-background-assertive tabs-color-light">
   <button class="button button-outline button-assertive icon ion-plus-round posicao-botao round-button"
-          ng-click="createMedicament()">
+          ng-click="showAction()">
   </button>
 
   <!-- Remédio Tab -->
