--- a/www/templates/createMedicament.html
+++ b/www/templates/createMedicament.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Novo Remédio">
 
-  <ion-nav-buttons side="primary">
+  <ion-nav-buttons side="secondary">
     <button class="button button-clear" ng-click="cancelCreate()">Cancelar</button>
   </ion-nav-buttons>
 
-  <ion-nav-buttons side="right">
+  <ion-nav-buttons side="primary">
     <button class="button button-clear"
             type="submit"
             form="createMedicamentForm">Salvar</button>
