--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9814,12 +9814,11 @@ form .form-errors {
 
 .tabs-striped .tab-item {
   margin-top: 1px;
-  font-size: 12px;  }
+  font-size: 12px; }
 
 .tabs-striped .tab-item.tab-item-active,
 .tabs-striped > .tabs {
   text-transform: uppercase;
   font-size: 12px;
   font-weight: bold;
-  border-bottom-width: 0px;
-  }
+  border-bottom-width: 0px; }
