criando o objeto de farmacia e deixando pronto para ser salvo no banco

--- a/www/templates/createPharmacy.html
+++ b/www/templates/createPharmacy.html
@@ -6,10 +6,10 @@
   <ion-nav-buttons side="primary">
     <button class="button button-clear"
             type="submit"
-            form="createAlertForm">Salvar</button>
+            form="createPharmacyForm">Salvar</button>
   </ion-nav-buttons>
 
-  <ion-content scroll="false" data-tap-disabled="true">
+  <ion-content>
     <!--Form with floating labels-->
     <form name="createPharmacyForm"
           novalidate=""
