--- a/www/templates/createAlert.html
+++ b/www/templates/createAlert.html
@@ -14,34 +14,79 @@
     <!--Form with floating labels-->
     <form name="createAlertForm"
           novalidate=""
-          ng-submit="addMedicament(createAlertForm)"
+          ng-submit="addAlert(createAlertForm)"
           class="create-form"
           id="createAlertForm">
 
       <ion-list >
 
-        <!-- Medicament Name -->
-        <label class="item item-input item-stacked-label"
-               ng-class="{'has-error':createAlertForm.name.$invalid}" >
-          <span class="input-label" >Nome</span >
-          <input type="text"
-                 placeholder="Nome do alerta"
-                 name="name"
-                 ng-model="formData.name"
-                 ng-required="true"
-                 ng-minlength="2">
-        </label >
-        <div class="form-errors"
-             ng-messages="createAlertForm.name.$error">
-          <div ng-messages-include="templates/form-errors.html"> </div>
-          <div class="form-error"
-               ng-message="minlength" >Por favor, insira um nome válido.
-          </div >
+        <img src="img/barraDataInicio.png" width="100%"/>
+        <label class="item item-icon-right assertive" ng-click="openDatePicker()">
+          <!-- <div class="input-label assertive"> -->
+            Data de Início
+          <!-- </div> -->
+          <span class="item-note calm">
+            {{ alert.startDate | date:'dd/MM/yyyy' }}
+          </span>
+          <i class="icon ion-ios-arrow-forward" style="color: lightgray"></i>
+        </label>
+
+        <!-- Alert Duration -->
+        <img src="img/barraDuracao.png" width="100%"/>
+        <ion-item>
+
+          <div class="row">
+            <div class="col item-input-inset">
+              <label class="item-input-wrapper">
+                <input type="text" placeholder="" ng-model="formData.quantity">
+              </label>
+            </div>
+            <div class="col col-75">
+              <div class=" button-bar">
+                <a class="button button-outline button-assertive segmented-collapsed"
+                   ng-click="formData.doseType='cp'"
+                   ng-class="{active: formData.doseType =='cp'}">dia</a>
+                <a class="button button-outline button-assertive segmented-collapsed"
+                   ng-click="formData.doseType='g'"
+                   ng-class="{active: formData.doseType =='g'}">semana</a>
+                <a class="button button-outline button-assertive segmented-collapsed"
+                   ng-click="formData.doseType='ml'"
+                   ng-class="{active: formData.doseType =='ml'}">mês</a>
+              </div>
+            </div>
+          </div>
         </div>
+        </ion-item>
+
+        <!-- Alert Interval -->
+        <label class="item item-input item-select">
+          <div class="input-label assertive">
+            Intervalo
+          </div>
+          <select>
+            <option>1 hora</option>
+            <option selected>2 horas</option>
+            <option>3 horas</option>
+            <option>4 horas</option>
+            <option>6 horas</option>
+            <option>8 horas</option>
+            <option>12 horas</option>
+            <option>24 horas</option>
+          </select>
+        </label>
+
+        <!-- Alert Medicament -->
+        <label class="item item-icon-right assertive"
+               ng-click=""
+               ui-sref="medicamentList">
+            Remédio
+          <span class="item-note calm">
+            {{medicament.name}}
+          </span>
+          <i class="icon ion-ios-arrow-forward" style="color: lightgray"></i>
+        </label>
 
       </ion-list>
-
     </form>
-
   </ion-content>
 </ion-view>
