--- a/www/templates/createMedicament.html
+++ b/www/templates/createMedicament.html
@@ -85,7 +85,7 @@
           <div class="input-label assertive">
             Intervalo
           </div>
-          <select>
+          <select class="color-mfblue">
             <option>1 hora</option>
             <option selected>2 horas</option>
             <option>3 hora(s)</option>
