--- a/www/templates/tabs/tab-remedio.html
+++ b/www/templates/tabs/tab-remedio.html
@@ -15,7 +15,8 @@
 
   <ion-content class="has-header has-subheader">
     <ion-list>
-      <ion-item class=" item-thumbnail-left item-icon-right" ng-repeat="remedio in remedios.remedios | filter : remedios.filter" type="item-text-wrap" href="#/tab/remedios/{{remedio.id}}">
+      <!--<ion-item class=" item-thumbnail-left item-icon-right" ng-repeat="remedio in remedios.remedios | filter : remedios.filter" type="item-text-wrap" href="#/tab/remedios/{{remedio.id}}">-->
+      <ion-item class=" item-thumbnail-left item-icon-right" ng-repeat="remedio in remedios.remedios" type="item-text-wrap" href="#/tab/remedios/{{remedio.id}}">
         <img ng-src="{{remedio.face}}">
         <h2 class="item-text-center-vertical color-mfblue">{{remedio.name}}</h2>
         <p class="color-mfblue">{{remedio.expirationDate}}</p>
