criando a pagina para escolha do medicamento do alerta

--- a/www/templates/createAlert.html
+++ b/www/templates/createAlert.html
@@ -83,7 +83,7 @@
                ng-click=""
                name="medicamentId"
                ng-model="formData.medicamentId"
-               ui-sref="medicamentList">
+               ui-sref="medicamentsList">
             Remédio
           <span class="item-note calm">
             {{medicament.name}}
