--- a/www/templates/medicamentsList.html
+++ b/www/templates/medicamentsList.html
@@ -5,13 +5,17 @@
   </ion-nav-buttons>
 
   <ion-content>
-    <ion-list show-delete="shouldShowDelete">
-      <ion-item ng-repeat="medicament in medicaments" ng-click="select(medicament.name, medicament.id)">
-        <h2>{{medicament.name}}</h2>
-        <ion-option-button class="button-assertive" style="background-color:#ef473a" ng-click="share(item)">
+    <ion-list class="color-mfblue" show-delete="shouldShowDelete">
+      <ion-item ng-repeat="medicament in medicaments"
+                ng-click="select(medicament.name, medicament.id)">
+        <h2 >{{medicament.name}}</h2>
+        <ion-option-button class="button-assertive"
+                           style="background-color:#ef473a"
+                           ng-click="share(item)">
           Apagar
         </ion-option-button>
-        <ion-delete-button class="ion-minus-circled" ng-click="items.splice($index, 1)">
+        <ion-delete-button class="ion-minus-circled"
+                           ng-click="items.splice($index, 1)">
         </ion-delete-button>
       </ion-item>
     </ion-list>
