--- a/www/templates/categoryList.html
+++ b/www/templates/categoryList.html
@@ -8,12 +8,12 @@
   </ion-nav-buttons>
 
   <ion-content>
-    <ion-list class="color-mfblue" show-delete="shouldShowDelete">
+    <ion-list show-delete="shouldShowDelete">
       <!--{{selectedCategory.name}}-->
       <ion-item ng-repeat="category in categories"
                 ng-click="select(category.name)">
 
-        <h2>{{category.name}}</h2>
+        <h2 class="color-mfblue">{{category.name}}</h2>
         <ion-option-button class="button-assertive"
                            style="background-color:#ef473a"
                            ng-click="share(item)">
