alterando valor do campo durationUnity do segmented control do alerta

--- a/www/templates/createAlert.html
+++ b/www/templates/createAlert.html
@@ -47,13 +47,13 @@
             <div class="col col-75">
               <div class=" button-bar">
                 <a class="button button-outline button-assertive segmented-collapsed"
-                   ng-click="createAlertForm.durationUnity='dia'"
+                   ng-click="createAlertForm.durationUnity=0"
                    ng-class="{active: createAlertForm.durationUnity == 'dia'}">dia</a>
                 <a class="button button-outline button-assertive segmented-collapsed"
-                   ng-click="createAlertForm.durationUnity='semana'"
+                   ng-click="createAlertForm.durationUnity=1"
                    ng-class="{active: createAlertForm.durationUnity == 'semana'}">semana</a>
                 <a class="button button-outline button-assertive segmented-collapsed"
-                   ng-click="createAlertForm.durationUnity='mês'"
+                   ng-click="createAlertForm.durationUnity=2"
                    ng-class="{active: createAlertForm.durationUnity == 'mês'}">mês</a>
               </div>
             </div>
